@@ -5,6 +5,7 @@ CHANGELOG
 ------------------
 
 * Fixed markup issue with editing file in admin
+* Fixed error message not always showing up properly
 
 
 1.2.5 (2016-09-05)
